fixed margin on ul. looked different on mobile device compared to desktop

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@ nav {
     position: fixed;
     z-index: 1;
 }
+nav ul {
+    margin: 0.5%;
+}
 nav li {
     width: 25%;
     display: inline-block;
